--- a/translate.html
+++ b/translate.html
@@ -10,16 +10,16 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
-    <meta http-equiv="Refresh" content="0; url='https://localazy.com/p/quickcursor'" />
+    <meta http-equiv="Refresh" content="0; url='https://localazy.com/p/quickcursor/'" />
 </head>
 <body>
 
   <script>
-    window.location.replace("https://localazy.com/p/quickcursor");
-    window.location.href = "https://localazy.com/p/quickcursor";
+    window.location.replace("https://localazy.com/p/quickcursor/");
+    window.location.href = "https://localazy.com/p/quickcursor/";
   </script>
   
-  <a href="https://localazy.com/p/quickcursor" title="Translate">Translate</a>
+  <a href="https://localazy.com/p/quickcursor/" title="Translate">Translate</a>
   
 </body>
 </html>
